<resources>
    <string name="app_name">QRAttend</string>
    <string name="timer">timer</string>
    <string name="startbutton">start</string>
    <string name="stopbutton">stop</string>
    <string name="killbutton">kill</string>
    <string name="withgame">with game</string>
    <string name="withoutgame">without game</string>
    <string name="posttext">posttext</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Settings">Settings</string>
    <string name="TakePicture">Take Picture</string>
    <string name="SelectfromGallery">Select from Gallery</string>
    <string name="Analyze">Analyze</string>
    <string name="History">History</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="empty_username">Username must be alphanumeric</string>
    <string name="empty_button">LOGIN</string>
    <string name="new_user">SIGN UP</string>
    <string name="signup_name">Enter your Name</string>
    <string name="signup_username">Enter username</string>
    <string name="signup_password">Enter Password</string>
    <string name="signup_email">Enter E-mail Address</string>
    <string name="signup_repass">Re-enter password</string>
    <string name="showbutton">Show</string>
    <string name="RegisterButton">Register</string>
    <string name="add_mobile">Enter Mobile Number</string>
    <string name="full_name">Enter your full name</string>
    <string name="gender">Select your gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="pref_key">prefkey</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">894252583478-2aonr5klrg8ifjaa7tvncqvs1gghl521.apps.googleusercontent.com</string>
</resources>
